# RFAnalyzer

./: .gitignore  404.html  Readme.md  about.html  advanced.html  bookmarks.html  build.gradle.kts  changelog.txt  demodulation.html  fft.html  index.html  mkdocs.yml  quickstart.html  recording.html  sdr-source.html  settings.gradle.kts  settings.html  setup.html  troubleshooting.html  ui-overview.html
.github/workflows/: build.yml  deploy-docs.yml
app/: build.gradle.kts
app/schemas/com.mantz_it.rfanalyzer.database.AppDatabase/: 1.json  2.json
app/src/androidTest/java/com/mantz_it/rfanalyzer/: ApplicationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/BandPlans/: ISM_maritime_air.json  iaru1_bandplan.json  iaru2_bandplan.json  iaru3_bandplan.json
app/src/main/res/values/: strings.xml
docs/: about.md  bookmarks.md  index.md  quickstart.md  recording.md  sdr-source.md  settings.md  ui-overview.md
fastlane/metadata/android/en-US/: full_description.txt
gradle/: libs.versions.toml
libairspy/: build.gradle.kts
libairspy/src/main/cpp/: airspy_device_native.cpp
libairspyhf/: build.gradle.kts
libairspyhf/src/main/cpp/: CMakeLists.txt  GIT_COMMIT  airspyhf_device_native.cpp
libhackrf/: build.gradle.kts
libhackrf/src/main/cpp/: CMakeLists.txt  GIT_COMMIT  hackrf_device_native.cpp
libhackrf/src/main/cpp/libhackrf/: hackrf.c  hackrf.h
libhydrasdr/: build.gradle.kts
libhydrasdr/src/main/cpp/: CMakeLists.txt  GIT_COMMIT
nativedsp/: build.gradle.kts
resources/: playstore description.txt
search/: search_index.json
(+45 files in other folders)
